--- a/print.html
+++ b/print.html
@@ -56,8 +56,10 @@
                             <a href="https://github.com/Risingsbj/My-FM" target="_blank"><i class="icon-link"></i>源代码</a>
                             <a href="https://risingsbj.github.io/My-FM/" target="_blank"><i class="icon-link"></i>在线预览</a>
                         </h4>
-                        <img src="img/myfm.png" data-action="zoom"><p>一个在线音乐播放器，利用开放音乐API，可在线播放音乐，进行播放、暂停、下一曲、调节音量、跳转播放进度等操作，还可以将当前音乐添加到本地的“喜爱音乐”列表，也可切换播放频道，在播放音乐时歌词根据播放进度自动滚动。</p>
-                        <p><strong>涉及技术：</strong>使用 HTML5、jQuery 实现 FM 应用，利用 Ajax 技术通过API请求数据</p>
+                        <img src="img/myfm.png" data-action="zoom">
+                        <p><strong>项目介绍：</strong>一个在线音乐播放器，利用开放音乐API，可在线播放音乐，进行播放、暂停、下一曲、调节音量、跳转播放进度等操作，还可以将当前音乐添加到本地的“喜爱音乐”列表，也可切换播放频道，在播放音乐时歌词根据播放进度自动滚动。</p>
+                        <p><strong>实现方式：</strong>运用原生JS，实现歌词滚动，单曲循环，下一首等功能；JQuery Ajax的Jsonp获取数据，根据接口数据将歌词的时间做间隔，歌词滚动；通过歌曲长度的百分比来对歌曲进行快进；歌曲时间转格式；原生CSS写基本样式,支持移动端。</p>
+                        <p><strong>涉及技术：</strong>使用 HTML5、jQuery 实现 FM 应用，利用 Ajax 技术通过API请求数据。</p>
                     </li>
                     <li>
                         <div class="circle"></div>
@@ -67,7 +69,8 @@
                             <a href="https://risingsbj.github.io/react2/build/index.html" target="_blank"><i class="icon-link"></i>在线预览</a>
                         </h4>
                         <img src="img/todolist.png" data-action="zoom" width="500px">
-                        <p>todoList是一个轻量级单页在线待办事项管理应用，支持注册，支持增删改查，云同步，视图切换，事项分类等功能。采用最新技术生态，ES6/ES7语法，追求最佳实践。</p>
+                        <p><strong>项目介绍：</strong>todoList是一个轻量级单页在线待办事项管理应用，支持注册，支持增删改查，云同步，视图切换，事项分类等功能。</p>
+                        <p><strong>实现方式：</strong>将组件逐一细分，尽量做到每一块都是一个独立的组建，方便日后修改，将状态放在顶层APP，通过props分发给子组件，通过state来管理数据状态，在渲染时，通过过滤筛选函数，把todoitem筛选然后渲染到页面；通过路由实现单页面的路由跳转，最后将账号密码部署到LeanCloud,并参考文档，增添邮箱找回密码。</p>
                         <p><strong>涉及技术：</strong>整个应用基于 React 框架和 LeanCloud搭建，用到了原生JavaScript和 ES6 等相关技术。</p>
                     </li>
                     <li>
@@ -78,10 +81,10 @@
                             <a href="https://risingsbj.github.io/requireJS-webpack-sample/webpack_sample/index.html" target="_blank"><i class="icon-link"></i>在线预览</a>
                         </h4>
                         <img src="img/web.jpg" data-action="zoom" width="500px">
-                        <p>这个项目是对组件封装以及代码打包的实践.</p>
-                        <p>主要组件包括：轮播、Tab跟踪、AJAX封装、JSONP封装、无限加载、懒加载、回到顶部。对于新闻无限加载部分使用过自己封装的瀑布流插件，由于会产生白边，放弃使用。由于涉及较多dom操作，选择使用jQuery提高开发效率。</p>
+                        <p><strong>项目介绍：</strong>这个项目是对组件封装以及代码打包的实践。</p>
+                        <p><strong>实现方式：</strong>组件包括轮播、Tab跟踪、AJAX封装、JSONP封装、无限加载、懒加载、回到顶部。由于涉及较多dom操作，选择使用jQuery提高开发效率。</p>
                         <p>整体页面使用webpack打包，也使用了requireJS作为对比，理解CMD&AMD差异。</p>
-                        <p>查看更多封装组件和demo：<a href="https://github.com/Risingsbj/Learning-box" target="_blank">我是链接</a></p>
+                        <p>查看更多封装组件和demo：<a href="https://github.com/Risingsbj/Learning-box" target="_blank">我是链接。</a></p>
                     </li>
                     <li>
                         <div class="circle"></div>
@@ -135,7 +138,7 @@
                     </li>
                     <li>
                         <div class="circle"></div>
-                        <p>熟悉<strong>Yarn & Npm & Git</strong>，了解Node.js，熟悉前后端数据交互的实现。</p>
+                        <p>熟悉<strong>Yarn & Npm & Git</strong>，熟悉Node.js，熟悉前后端数据交互的实现。</p>
                     </li>
                     <li>
                         <div class="circle"></div>
