--- a/print.html
+++ b/print.html
@@ -109,7 +109,7 @@
                                     <a href="https://www.npmjs.com/package/funny-robot" target="_blank"><i class="icon-link"></i>npm</a>
                                 </h5>
                                 <img src="img/funny-robot.png" data-action="zoom" width="500px">
-                                <p>一个有趣的聊天机器人</p>
+                                <p>一个有趣的聊天机器人。</p>
                                 <p>使用nodejs官方readline模块和http模块进行命令行交互，结合<a href="http://wap.tuling123.com/help/h_cent_webapi.jhtml?nav=doc" target="_blank">图灵api</a>实现的一个有趣的机器人，发布到npm。</p>
                             </li>
                         </ul>
