--- a/print.html
+++ b/print.html
@@ -118,7 +118,6 @@
             </li>
             <li>
                 <dt><i class="icon-bookmark"></i>Skill. 技能清单</dt>
-                <h3>前端</h3>
                 <ul class="exp">
                     <li>
                         <div class="circle"></div>
@@ -126,7 +125,7 @@
                     </li>
                     <li>
                         <div class="circle"></div>
-                        <p>熟练掌握原生Javascript，掌握重要概念如： <strong>原型， 闭包， 作用域链， ，面向对象， 异步流程控制</strong>等。能够根据面向对象思想利用JS/jQuery <strong>封装</strong> 常用插件。 熟练使用 <strong>ES6及ES7</strong> 部分新特性。</p>
+                        <p>熟练掌握原生Javascript，掌握重要概念如： <strong>原型， 闭包， 作用域链， 面向对象， 异步流程控制</strong>等。能够根据面向对象思想利用JS/jQuery <strong>封装</strong> 常用插件。 熟练使用 <strong>ES6及ES7</strong> 部分新特性。</p>
                     </li>
                     <li>
                         <div class="circle"></div>
