--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </h4>
                             <img src="img/todolist.png" data-action="zoom" width="500px">
                             <p><strong>项目介绍：</strong>ToDoList是一个轻量级单页在线待办事项管理应用，支持注册，支持增删改查，云同步，视图切换，事项分类等功能。</p>
-                            <p><strong>实现方式：</strong>将组件逐一细分，尽量做到每一块都是一个独立的组建，方便日后修改，将状态放在顶层APP，通过props分发给子组件，通过state来管理数据状态，在渲染时，通过过滤筛选函数，把todoitem筛选然后渲染到页面；通过路由实现单页面的路由跳转，最后将账号密码部署到LeanCloud,并参考文档，增添邮箱找回密码。</p>
+                            <p><strong>实现方式：</strong>将组件逐一细分，尽量做到每一块都是一个独立的组建，方便日后修改，将状态放在顶层APP，通过props分发给子组件，通过state来管理数据状态，在渲染时，通过过滤筛选函数，把todoitem筛选然后渲染到页面；通过路由实现单页面的路由跳转，最后将账号密码部署到LeanCloud，并参考文档，增添邮箱找回密码。</p>
                             <p><strong>涉及技术：</strong>整个应用基于 React 框架和 LeanCloud搭建，用到了原生JavaScript和 ES6 等相关技术。</p>
                         </li>
                         <li>
@@ -139,7 +139,7 @@
                         </li>
                         <li>
                             <div class="circle"></div>
-                            <p>熟悉React框架，<strong>理解重要概念</strong>如：生命周期、异步更新、虚拟DOM 等，熟悉组件拆分，理解父子组件的通信，并有相关项目踩坑（发现问题），脱坑（解决问题）的经验。</p>
+                            <p>熟悉React框架，<strong>理解重要概念</strong>如：生命周期、异步更新、虚拟DOM 等；熟悉组件拆分，理解父子组件的通信，并有相关项目踩坑（发现问题），脱坑（解决问题）的经验。</p>
                         </li>
                         <li>
                             <div class="circle"></div>
