--- a/index.html
+++ b/index.html
@@ -51,11 +51,62 @@
                 <li class="someRight">
                     <dt><i class="icon-bookmark"></i>Basic info. 基本信息</dt>
                     <dd><strong>个人信息:</strong> <span>孙兵见 / 男</span></dd>
-                    <dd><strong>年龄:</strong> <span>22</span></dd>
+                    <dd><strong>年龄:</strong> <span>23</span></dd>
                     <dd><strong>学历:</strong> <span>本科</span></dd>
                     <dd><strong>博客:</strong> <a href="http://www.jianshu.com/u/0135bff4a7eb" target="_blank">www.jianshu.com/u/0135bff4a7eb</a></dd>
                     <dd><strong>GitHub:</strong> <a href="https://github.com/Risingsbj" target="_blank">www.github.com/Risingsbj</a></dd>
                 </li>
+                <li>
+                    <dt><i class="icon-bookmark"></i>Skill. 技能清单</dt>
+                    <ul class="exp">
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟练掌握HTML(5)、常用CSS(3)和常见布局。具有 平均水准之上 的审美，追求设计的优雅。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟练掌握原生Javascript，掌握重要概念如： <strong>原型， 闭包， 作用域链，面向对象， 异步流程控制</strong>等。能够根据面向对象思想利用JS/jQuery <strong>封装</strong> 常用插件。 熟练使用 <strong>ES6及ES7</strong> 部分新特性。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟悉React框架，<strong>理解重要概念</strong>如：生命周期、异步更新、虚拟DOM 等；熟悉组件拆分，理解父子组件的通信，并有相关项目踩坑（发现问题），脱坑（解决问题）的经验。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟悉<strong>HTTP协议</strong>及浏览器渲染原理，了解前端 <strong>性能优化策略</strong>。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟悉<strong>Yarn & Npm & Git</strong>，熟悉Node.js，熟悉前后端数据交互的实现。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟悉<strong>CMD&AMD</strong>机制，熟悉<strong>Webpack</strong>打包，优化手段。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>追求风格优雅，整洁的代码。</p>
+                        </li>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <dt><i class="icon-bookmark"></i>Experience. 工作经验</dt>
+                    <ul class="exp">
+                        <li>
+                            <div class="circle"></div>
+                            <h4>
+                                <span>北京韦尔科技（2017.6-2018.4）</span>
+                            </h4>
+                                <p><strong>项目介绍：</strong></br>
+                                <a href="http://tuwenzhibo.com/index.html" target="_blank">图文直播</a>是实现视频、图片、文字的直播方式，可以进行国内外直播，具有首页引导，作品展示，教程展示等功能，并利用bootstrap进行了响应式开发。</p>
+                                <p><strong>工作介绍：</strong></br>
+                                1.使用HTML5、CSS3、Javascript等技术精确还原设计稿，主要实现PC端的作品展示页、详情页以及其它页面的开发；</br>
+                                2.遵循面向对象思想，将常用功能封装打包，将页面元素组件化，提高代码的重用性；</br>
+                                3.使用Ajax技术提高页面的交互体验；与后台人员配合，合理搭建HTML结构，写出可维护性较高的网站。</p>
+                        </li>
+                    </ul>
+                </li>                
                 <li>
                     <dt><i class="icon-bookmark"></i>Experience. 项目经验</dt>
                     <ul class="exp">
@@ -123,40 +174,6 @@
                                     <p>使用nodejs官方readline模块和http模块进行命令行交互，结合<a href="http://wap.tuling123.com/help/h_cent_webapi.jhtml?nav=doc" target="_blank">图灵api</a>实现的一个有趣的机器人，发布到npm。</p>
                                 </li>
                             </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <dt><i class="icon-bookmark"></i>Skill. 技能清单</dt>
-                    <ul class="exp">
-                        <li>
-                            <div class="circle"></div>
-                            <p>熟练掌握HTML(5)、常用CSS(3)和常见布局。具有 平均水准之上 的审美，追求设计的优雅。</p>
-                        </li>
-                        <li>
-                            <div class="circle"></div>
-                            <p>熟练掌握原生Javascript，掌握重要概念如： <strong>原型， 闭包， 作用域链，面向对象， 异步流程控制</strong>等。能够根据面向对象思想利用JS/jQuery <strong>封装</strong> 常用插件。 熟练使用 <strong>ES6及ES7</strong> 部分新特性。</p>
-                        </li>
-                        <li>
-                            <div class="circle"></div>
-                            <p>熟悉React框架，<strong>理解重要概念</strong>如：生命周期、异步更新、虚拟DOM 等；熟悉组件拆分，理解父子组件的通信，并有相关项目踩坑（发现问题），脱坑（解决问题）的经验。</p>
-                        </li>
-                        <li>
-                            <div class="circle"></div>
-                            <p>熟悉<strong>HTTP协议</strong>及浏览器渲染原理，了解前端 <strong>性能优化策略</strong>。</p>
-                        </li>
-                        <li>
-                            <div class="circle"></div>
-                            <p>熟悉<strong>Yarn & Npm & Git</strong>，熟悉Node.js，熟悉前后端数据交互的实现。</p>
-                        </li>
-                        <li>
-                            <div class="circle"></div>
-                            <p>熟悉<strong>CMD&AMD</strong>机制，熟悉<strong>Webpack</strong>打包，优化手段。</p>
-                        </li>
-                        <li>
-                            <div class="circle"></div>
-                            <p>追求风格优雅，整洁的代码。</p>
-                        </li>
                         </li>
                     </ul>
                 </li>
