--- a/print.html
+++ b/print.html
@@ -41,115 +41,129 @@
             <li class="someRight">
                 <dt><i class="icon-bookmark"></i>Basic info. 基本信息</dt>
                 <dd><strong>个人信息:</strong> <span>孙兵见 / 男</span></dd>
-                <dd><strong>年龄:</strong> <span>22</span></dd>
+                <dd><strong>年龄:</strong> <span>23</span></dd>
                 <dd><strong>学历:</strong> <span>本科</span></dd>
                 <dd><strong>博客:</strong> <a href="http://www.jianshu.com/u/0135bff4a7eb" target="_blank">www.jianshu.com/u/0135bff4a7eb</a></dd>
                 <dd><strong>GitHub:</strong> <a href="https://github.com/Risingsbj" target="_blank">www.github.com/Risingsbj</a></dd>
             </li>
             <li>
-                <dt><i class="icon-bookmark"></i>Experience. 项目经验</dt>
-                <ul class="exp">
-                    <li>
-                        <div class="circle"></div>
-                        <h4>
-                            <span>My-FM 音乐播放器</span>
-                            <a href="https://github.com/Risingsbj/My-FM" target="_blank"><i class="icon-link"></i>源代码</a>
-                            <a href="https://risingsbj.github.io/My-FM/" target="_blank"><i class="icon-link"></i>在线预览</a>
-                        </h4>
-                        <img src="img/myfm.png" data-action="zoom">
-                        <p><strong>项目介绍：</strong>一个在线音乐播放器，利用开放音乐API，可在线播放音乐，进行播放、暂停、下一曲、调节音量、跳转播放进度等操作。</p>
-                        <p><strong>实现方式：</strong>运用原生JS，实现歌词滚动，单曲循环，下一首等功能；JQuery Ajax的Jsonp获取数据，根据接口数据将歌词的时间做间隔，歌词滚动；通过歌曲长度的百分比来对歌曲进行快进；原生CSS写基本样式,支持移动端。</p>
-                        <p><strong>涉及技术：</strong>使用 HTML5、jQuery 实现 FM 应用，利用 Ajax 技术通过API请求数据。</p>
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <h4>
-                            <span>ToDoList</span>
-                            <a href="https://github.com/Risingsbj/react2" target="_blank"><i class="icon-link"></i>源代码</a>
-                            <a href="https://risingsbj.github.io/react2/build/index.html" target="_blank"><i class="icon-link"></i>在线预览</a>
-                        </h4>
-                        <img src="img/todolist.png" data-action="zoom" width="500px">
-                        <p><strong>项目介绍：</strong>ToDoList是一个轻量级单页在线待办事项管理应用，支持注册，支持增删改查，云同步，视图切换，事项分类等功能。</p>
-                        <p><strong>实现方式：</strong>将组件逐一细分，尽量做到每一块都是一个独立的组建，方便日后修改，将状态放在顶层APP，通过props分发给子组件，通过state来管理数据状态，在渲染时，通过过滤筛选函数，把todoitem筛选然后渲染到页面；最后将账号密码部署到LeanCloud，并参考文档，增添邮箱找回密码。</p>
-                        <p><strong>涉及技术：</strong>整个应用基于 React 框架和 LeanCloud搭建，用到了原生JavaScript和 ES6 等相关技术。</p>
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <h4>
-                            <span>组件化商业首页</span>
-                            <a href="https://github.com/Risingsbj/requireJS-webpack-sample" target="_blank"><i class="icon-link"></i>源代码</a>
-                            <a href="https://risingsbj.github.io/requireJS-webpack-sample/webpack_sample/index.html" target="_blank"><i class="icon-link"></i>在线预览</a>
-                        </h4>
-                        <img src="img/web.jpg" data-action="zoom" width="500px">
-                        <p><strong>项目介绍：</strong>这个项目是对组件封装以及代码打包的实践。</p>
-                        <p><strong>实现方式：</strong>组件包括轮播、Tab跟踪、AJAX封装、JSONP封装、无限加载、懒加载、回到顶部。由于涉及较多dom操作，选择使用jQuery提高开发效率。</p>
-                        <p>整体页面使用webpack打包，也使用了requireJS作为对比，理解CMD&AMD差异。</p>
-                        <p>查看更多封装组件和demo：<a href="https://github.com/Risingsbj/Learning-box" target="_blank">我是链接。</a></p>
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <h4>
-                            一些 Node.js 小程序
-                        </h4>
-                        <ul class="efe">
-                            <li>
-                                <h5>
-                                    weather-hunger
-                                    <a href="https://github.com/Risingsbj/weather-hunger" target="_blank"><i class="icon-link"></i>源代码</a>
-                                    <a href="https://www.npmjs.com/package/weather-hunger" target="_blank"><i class="icon-link"></i>npm</a>
-                                </h5>
-                                <img src="img/weather.png" data-action="zoom" width="400px">
-                                <p>一个实用node命令行工具。</p>
-                                <p>用npm全局安装后可以输入weather或weather+地名，查询用户当前所在城市的天气。</p>
-                            </li>
-                            <li>
-                                <h5>
-                                    funny-robot
-                                    <a href="https://github.com/Risingsbj/funny-robot" target="_blank"><i class="icon-link"></i>源代码</a>
-                                    <a href="https://www.npmjs.com/package/funny-robot" target="_blank"><i class="icon-link"></i>npm</a>
-                                </h5>
-                                <img src="img/funny-robot.png" data-action="zoom" width="500px">
-                                <p>一个有趣的聊天机器人。</p>
-                                <p>使用nodejs官方readline模块和http模块进行命令行交互，结合<a href="http://wap.tuling123.com/help/h_cent_webapi.jhtml?nav=doc" target="_blank">图灵api</a>实现的一个有趣的机器人，发布到npm。</p>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <dt><i class="icon-bookmark"></i>Skill. 技能清单</dt>
-                <ul class="exp">
-                    <li>
-                        <div class="circle"></div>
-                        <p>熟练掌握HTML(5)、常用CSS(3)和常见布局。具有 平均水准之上 的审美，追求设计的优雅。</p>
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <p>熟练掌握原生Javascript，掌握重要概念如： <strong>原型， 闭包， 作用域链， 面向对象， 异步流程控制</strong>等。能够根据面向对象思想利用JS/jQuery <strong>封装</strong> 常用插件。 熟练使用 <strong>ES6及ES7</strong> 部分新特性。</p>
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <p>熟悉React框架，<strong>理解重要概念</strong>如：生命周期、异步更新、虚拟DOM 等；熟悉组件拆分，理解父子组件的通信，并有相关项目踩坑（发现问题），脱坑（解决问题）的经验。</p>
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <p>熟悉<strong>HTTP协议</strong>及浏览器渲染原理，了解前端 <strong>性能优化策略</strong>。</p>
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <p>熟悉<strong>Yarn & Npm & Git</strong>，熟悉Node.js，熟悉前后端数据交互的实现。</p>
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <p>熟悉<strong>CMD&AMD</strong>机制，熟悉<strong>Webpack</strong>打包，优化手段。</p>
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <p>追求风格优雅，整洁的代码。</p>
-                    </li>
-                    </li>
-                </ul>
-            </li>
+                    <dt><i class="icon-bookmark"></i>Skill. 技能清单</dt>
+                    <ul class="exp">
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟练掌握HTML(5)、常用CSS(3)和常见布局。具有 平均水准之上 的审美，追求设计的优雅。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟练掌握原生Javascript，掌握重要概念如： <strong>原型， 闭包， 作用域链，面向对象， 异步流程控制</strong>等。能够根据面向对象思想利用JS/jQuery <strong>封装</strong> 常用插件。 熟练使用 <strong>ES6及ES7</strong> 部分新特性。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟悉React框架，<strong>理解重要概念</strong>如：生命周期、异步更新、虚拟DOM 等；熟悉组件拆分，理解父子组件的通信，并有相关项目踩坑（发现问题），脱坑（解决问题）的经验。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟悉<strong>HTTP协议</strong>及浏览器渲染原理，了解前端 <strong>性能优化策略</strong>。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟悉<strong>Yarn & Npm & Git</strong>，熟悉Node.js，熟悉前后端数据交互的实现。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>熟悉<strong>CMD&AMD</strong>机制，熟悉<strong>Webpack</strong>打包，优化手段。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <p>追求风格优雅，整洁的代码。</p>
+                        </li>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <dt><i class="icon-bookmark"></i>Experience. 工作经验</dt>
+                    <ul class="exp">
+                        <li>
+                            <div class="circle"></div>
+                            <h4>
+                                <span>北京韦尔科技（2017.6-2018.4）</span>
+                            </h4>
+                                <p><strong>项目介绍：</strong></br>
+                                <a href="http://tuwenzhibo.com/index.html" target="_blank">图文直播</a>是实现视频、图片、文字的直播方式，可以进行国内外直播，具有首页引导，作品展示，教程展示等功能，并利用bootstrap进行了响应式开发。</p>
+                                <p><strong>工作介绍：</strong></br>
+                                1.使用HTML5、CSS3、Javascript等技术精确还原设计稿，主要实现PC端的作品展示页、详情页以及其它页面的开发；</br>
+                                2.遵循面向对象思想，将常用功能封装打包，将页面元素组件化，提高代码的重用性；</br>
+                                3.使用Ajax技术提高页面的交互体验；与后台人员配合，合理搭建HTML结构，写出可维护性较高的网站。</p>
+                        </li>
+                    </ul>
+                </li>                
+                <li>
+                    <dt><i class="icon-bookmark"></i>Experience. 项目经验</dt>
+                    <ul class="exp">
+                        <li>
+                            <div class="circle"></div>
+                            <h4>
+                                <span>My-FM 音乐播放器</span>
+                                <a href="https://github.com/Risingsbj/My-FM" target="_blank"><i class="icon-link"></i>源代码</a>
+                                <a href="https://risingsbj.github.io/My-FM/" target="_blank"><i class="icon-link"></i>在线预览</a>
+                            </h4>
+                            <p><strong>项目介绍：</strong>一个在线音乐播放器，利用开放音乐API，可在线播放音乐，进行播放、暂停、下一曲、调节音量、跳转播放进度等操作。</p>
+                            <p><strong>实现方式：</strong>运用原生JS，实现歌词滚动，单曲循环，下一首等功能；JQuery Ajax的Jsonp获取数据，根据接口数据将歌词的时间做间隔，歌词滚动；通过歌曲长度的百分比来对歌曲进行快进；原生CSS写基本样式,支持移动端。</p>
+                            <p><strong>涉及技术：</strong>使用 HTML5、jQuery 实现 FM 应用，利用 Ajax 技术通过API请求数据。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <h4>
+                                <span>ToDoList</span>
+                                <a href="https://github.com/Risingsbj/react2" target="_blank"><i class="icon-link"></i>源代码</a>
+                                <a href="https://risingsbj.github.io/react2/build/index.html" target="_blank"><i class="icon-link"></i>在线预览</a>
+                            </h4>
+                            <p><strong>项目介绍：</strong>ToDoList是一个轻量级单页在线待办事项管理应用，支持注册，支持增删改查，云同步，视图切换，事项分类等功能。</p>
+                            <p><strong>实现方式：</strong>将组件逐一细分，尽量做到每一块都是一个独立的组建，方便日后修改，将状态放在顶层APP，通过props分发给子组件，通过state来管理数据状态，在渲染时，通过过滤筛选函数，把todoitem筛选然后渲染到页面；最后将账号密码部署到LeanCloud，并参考文档，增添邮箱找回密码。</p>
+                            <p><strong>涉及技术：</strong>整个应用基于 React 框架和 LeanCloud搭建，用到了原生JavaScript和 ES6 等相关技术。</p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <h4>
+                                <span>组件化商业首页</span>
+                                <a href="https://github.com/Risingsbj/requireJS-webpack-sample" target="_blank"><i class="icon-link"></i>源代码</a>
+                                <a href="https://risingsbj.github.io/requireJS-webpack-sample/webpack_sample/index.html" target="_blank"><i class="icon-link"></i>在线预览</a>
+                            </h4>
+                            <p><strong>项目介绍：</strong>这个项目是对组件封装以及代码打包的实践。</p>
+                            <p><strong>实现方式：</strong>组件包括轮播、Tab跟踪、AJAX封装、JSONP封装、无限加载、懒加载、回到顶部。由于涉及较多dom操作，选择使用jQuery提高开发效率。</p>
+                            <p>整体页面使用webpack打包，也使用了requireJS作为对比，理解CMD&AMD差异。</p>
+                            <p>查看更多封装组件和demo：<a href="https://github.com/Risingsbj/Learning-box" target="_blank">我是链接。</a></p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <h4>
+                                一些 Node.js 小程序
+                            </h4>
+                            <ul class="efe">
+                                <li>
+                                    <h5>
+                                        weather-hunger
+                                        <a href="https://github.com/Risingsbj/weather-hunger" target="_blank"><i class="icon-link"></i>源代码</a>
+                                        <a href="https://www.npmjs.com/package/weather-hunger" target="_blank"><i class="icon-link"></i>npm</a>
+                                    </h5>
+                                    <img src="img/weather.png" data-action="zoom" width="400px">
+                                    <p>一个实用node命令行工具。</p>
+                                    <p>用npm全局安装后可以输入weather或weather+地名，查询用户当前所在城市的天气。</p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        funny-robot
+                                        <a href="https://github.com/Risingsbj/funny-robot" target="_blank"><i class="icon-link"></i>源代码</a>
+                                        <a href="https://www.npmjs.com/package/funny-robot" target="_blank"><i class="icon-link"></i>npm</a>
+                                    </h5>
+                                    <img src="img/funny-robot.png" data-action="zoom" width="500px">
+                                    <p>一个有趣的聊天机器人。</p>
+                                    <p>使用nodejs官方readline模块和http模块进行命令行交互，结合<a href="http://wap.tuling123.com/help/h_cent_webapi.jhtml?nav=doc" target="_blank">图灵api</a>实现的一个有趣的机器人，发布到npm。</p>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
         </ul>
     </div>
 </div>
